Add compile and clean hook for backward compatibility

--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,16 @@
+{plugins, [pc]}.
+
+{provider_hooks,
+ [
+  {pre,
+   [
+    {compile, {pc, compile}},
+    {clean, {pc, clean}}
+   ]
+  }
+ ]
+}.
+
 {port_specs, [{"priv/erl_string_encoders_nif.so", ["c_src/*.c"]}]}.
 
 {port_env, [{"LDFLAGS",
