Add benchmark code

--- a/rebar.config
+++ b/rebar.config
@@ -15,3 +15,9 @@
 
 {port_env, [{"LDFLAGS",
              "$LDFLAGS -lmodpbase64"}]}.
+
+{deps, [
+  {timing, {git, "https://github.com/lpgauth/timing.git", {tag, "0.1.0"}}},
+  {timothy, {git, "https://github.com/gnuvince/timothy.git", {tag, "v0.1.0"}}},
+  {eministat, {git, "https://github.com/jlouis/eministat.git", {ref, "d2b7c9999765ea257f4eb03b177fc83f63038fd4"}}}
+]}.
